--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <title>Django Girls blog</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"
     </head>
     <body>
-        <div>
+        <div class='jumbotron' align="center">
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
         {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
+            <div align="center" style="margin:30px;background-color:#D9DAFD">
                 <h1><a href="">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <p style="color:grey; font-size:10px;">published: {{ post.published_date }}</p>
             </div>
         {% endfor %}
       </body>
