--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,13 @@
-{% load static %}
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Django Girls blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Didact+Gothic" rel="stylesheet">
-    <body>
-        <div class='jumbotron' align="center">
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
-        {% for post in posts %}
-          <div class="post_st" align="center">
+{% extends 'blog/base.html' %}
 
-             <h1 class="post_title"><a href="">{{ post.title }}</a></h1>
-             <p>{{ post.text|linebreaksbr }}</p>
-             <div class="date">
-                 <p>Published: {{ post.published_date }}</p>
-             </div>
-         </div>
-        {% endfor %}
-      </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post_st">
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+        </div>
+    {% endfor %}
+{% endblock %}
