--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Didact+Gothic" rel="stylesheet">
 <body>
-  <div class='jumbotron' align="center">
+  <div class='title' align="center">
       <h1><a href="/">Django Girls Blog</a></h1>
   </div>
     <div class="content container">
