--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for post in posts %}
         <div class="post_st">
-            <h1><a href="">{{ post.title }}</a></h1>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr }}</p>
             <div class="date">
                 {{ post.published_date }}
